# agentdeck

./: .gitignore  LICENSE  README.md  commit_msg.txt  pyproject.toml
.github/workflows/: ci.yml
courier/: emit.py
docs/: payloads.md
src/agentdeck/: __main__.py  doctor.py  events.py  export.py  installer.py  notify.py  pairing.py  paths.py  pricing.py  reader.py  transcript.py
src/agentdeck/ui/: app.py  theme.py
src/agentdeck/ui/widgets/: chat_transcript_screen.py  detail_screen.py  focused_timeline.py  session_browser_screen.py  session_sidebar.py  session_stats_panel.py
src/blackbox/: __main__.py  doctor.py  events.py  export.py  installer.py  notify.py  pairing.py  pricing.py  reader.py  transcript.py
src/blackbox/ui/: app.py  theme.py
src/blackbox/ui/widgets/: chat_transcript_screen.py  detail_screen.py  focused_timeline.py  search_screen.py  (+4 more)
tests/: test_app_color.py  test_courier.py  test_courier_rotation.py  test_events_registry.py  test_export.py  test_fixtures.py  test_installer.py  test_notify.py  test_pairing.py  test_pricing.py  test_reader.py  test_session_browser_scan.py  test_theme.py  test_transcript.py  test_ui.py  test_ui_chat_transcript.py  test_ui_cockpit.py  test_ui_newest_first.py  test_ui_notify.py  test_ui_replay.py  test_ui_search_filters.py  test_ui_theme.py  test_ui_tokens_cost.py
tests/fixtures/missing_post_on_failed_read/: main.jsonl
tests/fixtures/multi_tool_session/: main.jsonl
tests/fixtures/subagent_delegation/: agent-a0ba1fb5d83100135.jsonl  main.jsonl
tests/transcript_fixtures/: sample_transcript.jsonl
