[project]
name = "blackbox-cc"
version = "0.1.0"
description = "A flight recorder + live cockpit TUI for Claude Code sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=0.60",
    "watchfiles>=0.21",
]

[project.scripts]
blackbox = "blackbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackbox"]

# courier/emit.py lives at the repo root, outside src/blackbox, so it never
# gets picked up by `packages` above — without this it silently vanishes
# from the installed package (see installer._courier_path()'s dev/packaged
# fallback, which needs a copy at this path once actually pip-installed).
[tool.hatch.build.targets.wheel.force-include]
"courier/emit.py" = "blackbox/courier/emit.py"

[tool.hatch.build.targets.sdist]
include = ["src/blackbox", "courier", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
